src/tests/fixtures/input_types/InputTypeReferencingOutputType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class Query {
  /** @gqlField */
  someField(args: { input: MyInputType }): string;
}

/** @gqlInput */
type MyInputType = {
  someField: Query;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/input_types/InputTypeReferencingOutputType.invalid.ts:9:14 - error: The type of MyInputType.someField must be Input Type but got: Query!.

9   someField: Query;
               ~~~~~
